[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Themes/main_font_tiny.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Themes/panel_med.tres" type="StyleBox" id=3]
[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=4]
[ext_resource path="res://mods/Jade.TackleBox/Scenes/ModConfig/modconfig.gd" type="Script" id=5]

[node name="mod_config" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -335, -90 )
theme = ExtResource( 1 )
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0627451, 0.109804, 0.192157, 0.431373 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8

[node name="Panel" type="Panel" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_styles/panel = ExtResource( 3 )

[node name="config" type="Control" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/config"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_editor_description_": "	"
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/config/ScrollContainer"]
margin_right = 704.0
margin_bottom = 584.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="Panel/config/ScrollContainer/VBoxContainer"]
margin_right = 704.0
margin_bottom = 34.0
theme = ExtResource( 1 )
text = "MODNAME"

[node name="Warn" type="Label" parent="Panel/config/ScrollContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 704.0
margin_bottom = 59.0
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "Changes won't take effect until next start!"

[node name="close" type="Button" parent="Panel"]
anchor_left = 0.957031
anchor_top = -0.0123457
anchor_right = 0.957031
anchor_bottom = -0.0123457
margin_right = 40.0
margin_bottom = 40.0
text = "X"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="restart" type="Button" parent="Panel"]
anchor_top = 0.898148
anchor_bottom = 0.898148
margin_left = -16.0
margin_right = 224.0
margin_bottom = 80.0
text = "Apply & Restart"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="apply" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_top = 0.898148
anchor_right = 1.0
anchor_bottom = 0.898148
margin_left = -193.0
margin_right = 19.0
margin_bottom = 80.0
text = "Save Changes"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Panel/close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="Panel/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/apply" to="." method="_on_apply_pressed"]
